Fix: Clarify mlflow.log_artifacts only supports directories
### Related Issue
Closes #16241

### What changes are proposed in this pull request?

Updated the tracking API documentation table to clarify that `mlflow.log_artifacts` does **not** support logging single files — only entire directories. This prevents confusion for users misinterpreting the function’s capability.

### How is this PR tested?
- Manual verification of table content

### Release Notes

#### Is this a user-facing change?
- Yes. Documentation clarification for `log_artifacts`.

#### Component(s) affected:
- `area/docs`

#### Release classification:
- `rn/documentation`

#### Include in next patch release?
- Yes


Signed-off-by: Arjun Dinesh Jagdale <142811259+ArjunJagdale@users.noreply.github.com>

--- a/docs/docs/classic-ml/tracking/tracking-api/index.mdx
+++ b/docs/docs/classic-ml/tracking/tracking-api/index.mdx
@@ -131,8 +131,8 @@ Ideal for custom training loops, advanced experimentation, or when you need prec
 
 | Function | Purpose | Example |
 |----------|---------|---------|
-| <APILink fn="mlflow.log_artifact" /> | Log single file/directory | `mlflow.log_artifact("model.pkl")` |
-| <APILink fn="mlflow.log_artifacts" /> | Log entire directory | `mlflow.log_artifacts("./plots/")` |
+| <APILink fn="mlflow.log_artifact" /> | Log a single file or directory | `mlflow.log_artifact("model.pkl")` |
+| <APILink fn="mlflow.log_artifacts" /> | Log all files in a directory (**not for single files**) | `mlflow.log_artifacts("./plots/")` |
 | <APILink fn="mlflow.get_artifact_uri" /> | Get artifact storage location | `uri = mlflow.get_artifact_uri()` |
 
 ### Model Management (New in MLflow 3)
