--- a/docs/docs/genai/tracing/integrations/listing/groq.mdx
+++ b/docs/docs/genai/tracing/integrations/listing/groq.mdx
@@ -100,7 +100,7 @@ Completions:
 ```
 
 
-Currently, groq token usage doesn't support token usage tracking for Audio transcription and Audio translation
+Currently, groq token usage doesn't support token usage tracking for Audio transcription and Audio translation.
 
 ## Disable auto-tracing
 
