--- a/docs/docs/genai/governance/ai-gateway/index.mdx
+++ b/docs/docs/genai/governance/ai-gateway/index.mdx
@@ -1534,26 +1534,21 @@ class MyLLMProvider(BaseProvider):
     # Unimplemented methods will return a 501 Not Implemented HTTP response upon invocation.
     async def completions_stream(
         self, payload: completions.RequestPayload
-    ) -> AsyncIterable[completions.StreamResponsePayload]:
-        ...
+    ) -> AsyncIterable[completions.StreamResponsePayload]: ...
 
     async def completions(
         self, payload: completions.RequestPayload
-    ) -> completions.ResponsePayload:
-        ...
+    ) -> completions.ResponsePayload: ...
 
     async def chat_stream(
         self, payload: chat.RequestPayload
-    ) -> AsyncIterable[chat.StreamResponsePayload]:
-        ...
+    ) -> AsyncIterable[chat.StreamResponsePayload]: ...
 
-    async def chat(self, payload: chat.RequestPayload) -> chat.ResponsePayload:
-        ...
+    async def chat(self, payload: chat.RequestPayload) -> chat.ResponsePayload: ...
 
     async def embeddings(
         self, payload: embeddings.RequestPayload
-    ) -> embeddings.ResponsePayload:
-        ...
+    ) -> embeddings.ResponsePayload: ...
 ```
 
 Then, you need to create a Python package that contains the plugin implementation.
