--- a/docs/docs/genai/flavors/responses-agent-intro.mdx
+++ b/docs/docs/genai/flavors/responses-agent-intro.mdx
@@ -168,7 +168,8 @@ To test out a ResponsesAgent, you can pass a single input dictionary that follow
 from mlflow.pyfunc import ResponsesAgent
 
 
-class MyResponsesAgent(ResponsesAgent): ...
+class MyResponsesAgent(ResponsesAgent):
+    ...
 
 
 responses_agent = MyResponsesAgent()
