--- a/docs/docs/genai/tracing/integrations/listing/autogen.mdx
+++ b/docs/docs/genai/tracing/integrations/listing/autogen.mdx
@@ -121,6 +121,63 @@ agent = AssistantAgent(
 await agent.run(task="1+1")
 ```
 
+## Token usage
+
+MLflow >= 3.2.0 supports token usage tracking for AutoGen. The token usage for each LLM call will be logged in the `mlflow.chat.tokenUsage` attribute. The total token usage throughout the trace will be
+available in the `token_usage` field of the trace info object.
+
+```python
+import json
+import mlflow
+
+mlflow.autogen.autolog()
+
+# Run the tool calling agent defined in the previous section
+await agent.run(task="1+1")
+
+# Get the trace object just created
+last_trace_id = mlflow.get_last_active_trace_id()
+trace = mlflow.get_trace(trace_id=last_trace_id)
+
+# Print the token usage
+total_usage = trace.info.token_usage
+print("== Total token usage: ==")
+print(f"  Input tokens: {total_usage['input_tokens']}")
+print(f"  Output tokens: {total_usage['output_tokens']}")
+print(f"  Total tokens: {total_usage['total_tokens']}")
+
+# Print the token usage for each LLM call
+print("\n== Detailed usage for each LLM call: ==")
+for span in trace.data.spans:
+    if usage := span.get_attribute("mlflow.chat.tokenUsage"):
+        print(f"{span.name}:")
+        print(f"  Input tokens: {usage['input_tokens']}")
+        print(f"  Output tokens: {usage['output_tokens']}")
+        print(f"  Total tokens: {usage['total_tokens']}")
+```
+
+```bash
+== Total token usage: ==
+  Input tokens: 65
+  Output tokens: 17
+  Total tokens: 82
+
+== Detailed usage for each LLM call: ==
+create:
+  Input tokens: 65
+  Output tokens: 17
+  Total tokens: 82
+```
+
+### Supported APIs
+
+MLflow supports automatic token usage tracking for the following AutoGen APIs.
+It does not support token usage tracking for asynchronous generators. Asynchronous streaming APIs such as `run_stream` or `on_messages_stream` are not tracked.
+
+- `ChatCompletionClient.create`
+- `BaseChatAgent.run`
+- `BaseChatAgent.on_messages`
+
 ### Disable auto-tracing
 
 Auto tracing for AutoGen can be disabled globally by calling `mlflow.autogen.autolog(disable=True)` or `mlflow.autolog(disable=True)`.
