update tracking info for lighthouse
Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

--- a/docs/docs/classic-ml/deep-learning/tensorflow/quickstart/quickstart-tensorflow.ipynb
+++ b/docs/docs/classic-ml/deep-learning/tensorflow/quickstart/quickstart-tensorflow.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "In this guide, we will show how to train your model with Tensorflow and log your training using MLflow.\n",
     "\n",
-    "We will use the [Databricks Free Trial](https://mlflow.org/docs/latest/getting-started/databricks-trial.html), which has built-in support for MLflow. The Databricks Free Trial provides an opportunity to use Databricks platform for free, if you haven't, please register an account via [link](https://signup.databricks.com/?destination_url=/ml/experiments-signup?source=OSS_DOCS&dbx_source=TRY_MLFLOW&signup_experience_step=EXPRESS&provider=MLFLOW).\n",
+    "We will use the [Databricks Free Trial](https://mlflow.org/docs/latest/getting-started/databricks-trial.html), which has built-in support for MLflow. The Databricks Free Trial provides an opportunity to use Databricks platform for free, if you haven't, please register an account via [link](https://signup.databricks.com/?destination_url=/ml/experiments-signup?source=OSS_DOCS&dbx_source=TRY_MLFLOW&signup_experience_step=EXPRESS&provider=MLFLOW&utm_source=OSS_DOCS).\n",
     "\n",
     "You can run code in this guide from cloud-based notebooks like Databricks notebook or Google Colab, or run it on your local machine."
    ]
