--- a/docs/docs/genai/prompt-version-mgmt/prompt-registry/create-and-edit-prompts.mdx
+++ b/docs/docs/genai/prompt-version-mgmt/prompt-registry/create-and-edit-prompts.mdx
@@ -52,12 +52,9 @@ prompt = mlflow.genai.register_prompt(
     template=initial_template,
     # Optional: Provide a commit message to describe the changes
     commit_message="Initial commit",
-    # Optional: Specify any additional metadata about the prompt version
-    version_metadata={
-        "author": "author@example.com",
-    },
     # Optional: Set tags applies to the prompt (across versions)
     tags={
+        "author": "author@example.com",
         "task": "summarization",
         "language": "en",
     },
@@ -105,7 +102,7 @@ updated_prompt = mlflow.genai.register_prompt(
     name="summarization-prompt",  # Specify the existing prompt name
     template=new_template,
     commit_message="Improvement",
-    version_metadata={
+    tags={
         "author": "author@example.com",
     },
 )
