--- a/docs/docs/genai/prompt-version-mgmt/prompt-registry/use-prompts-in-apps.mdx
+++ b/docs/docs/genai/prompt-version-mgmt/prompt-registry/use-prompts-in-apps.mdx
@@ -32,10 +32,10 @@ import mlflow
 prompt_name = "my-sdk-prompt"
 
 # Load by specific version (assuming version 1 exists)
-mlflow.genai.load_prompt(uri=f"prompts:/{prompt_name}/1")
+mlflow.genai.load_prompt(name_or_uri=f"prompts:/{prompt_name}/1")
 
 # Load by alias (assuming an alias 'staging' points to a version of a prompt)
-mlflow.genai.load_prompt(uri=f"prompts:/{prompt_name}@staging")
+mlflow.genai.load_prompt(name_or_uri=f"prompts:/{prompt_name}@staging")
 ```
 
 ## Formatting Prompts with Variables
