--- a/docs/docs/genai/overview/why-mlflow.mdx
+++ b/docs/docs/genai/overview/why-mlflow.mdx
@@ -72,6 +72,7 @@ from mlflow.genai.scorers import Correctness, RelevanceToQuery
 
 # Evaluate your app with AI-powered metrics
 results = mlflow.genai.evaluate(
+    predict_fn=my_app,
     data=eval_dataset,
     scorers=[
         Correctness(),
